@@ -32,6 +32,7 @@
 #include <Champ_Generique_Statistiques.h>
 #include <Champ_Generique_Transformation.h>
 #include <Champ_Generique_refChamp.h>
+#include <Champ_Generique_refChamp_special.h>
 #include <Champ_Tabule_Morceaux.h>
 #include <Champ_Tabule_Temps.h>
 #include <Champ_Uniforme.h>
@@ -91,30 +92,31 @@ Champ_Generique_Reduction_0D inst28;verifie_pere(inst28);
 Champ_Generique_Statistiques inst29;verifie_pere(inst29);
 Champ_Generique_Transformation inst30;verifie_pere(inst30);
 Champ_Generique_refChamp inst31;verifie_pere(inst31);
-Champ_Tabule_Morceaux inst32;verifie_pere(inst32);
-Champ_Tabule_Temps inst33;verifie_pere(inst33);
-Champ_Uniforme inst34;verifie_pere(inst34);
-Champ_Uniforme_Morceaux inst35;verifie_pere(inst35);
-Champ_Uniforme_Morceaux_Tabule_Temps inst36;verifie_pere(inst36);
-Champ_front_Tabule inst37;verifie_pere(inst37);
-Champ_front_bruite inst38;verifie_pere(inst38);
-Champ_front_calc inst39;verifie_pere(inst39);
-Champ_front_calc_interne inst40;verifie_pere(inst40);
-Champ_front_debit inst41;verifie_pere(inst41);
-Champ_front_debit_massique inst42;verifie_pere(inst42);
-Champ_front_fonc inst43;verifie_pere(inst43);
-Champ_front_fonc_gradient inst44;verifie_pere(inst44);
-Champ_front_fonc_pois_ipsn inst45;verifie_pere(inst45);
-Champ_front_fonc_pois_tube inst46;verifie_pere(inst46);
-Champ_front_lu inst47;verifie_pere(inst47);
-Champ_front_normal inst48;verifie_pere(inst48);
-Champ_front_t inst49;verifie_pere(inst49);
-Champ_front_tangentiel inst50;verifie_pere(inst50);
-Champ_front_txyz inst51;verifie_pere(inst51);
-Champ_front_uniforme inst52;verifie_pere(inst52);
-Champ_front_xyz_debit inst53;verifie_pere(inst53);
-Champ_input_P0 inst54;verifie_pere(inst54);
-Init_par_partie inst55;verifie_pere(inst55);
-Tayl_Green inst56;verifie_pere(inst56);
-champ_init_canal_sinal inst57;verifie_pere(inst57);
+Champ_Generique_refChamp_special inst32;verifie_pere(inst32);
+Champ_Tabule_Morceaux inst33;verifie_pere(inst33);
+Champ_Tabule_Temps inst34;verifie_pere(inst34);
+Champ_Uniforme inst35;verifie_pere(inst35);
+Champ_Uniforme_Morceaux inst36;verifie_pere(inst36);
+Champ_Uniforme_Morceaux_Tabule_Temps inst37;verifie_pere(inst37);
+Champ_front_Tabule inst38;verifie_pere(inst38);
+Champ_front_bruite inst39;verifie_pere(inst39);
+Champ_front_calc inst40;verifie_pere(inst40);
+Champ_front_calc_interne inst41;verifie_pere(inst41);
+Champ_front_debit inst42;verifie_pere(inst42);
+Champ_front_debit_massique inst43;verifie_pere(inst43);
+Champ_front_fonc inst44;verifie_pere(inst44);
+Champ_front_fonc_gradient inst45;verifie_pere(inst45);
+Champ_front_fonc_pois_ipsn inst46;verifie_pere(inst46);
+Champ_front_fonc_pois_tube inst47;verifie_pere(inst47);
+Champ_front_lu inst48;verifie_pere(inst48);
+Champ_front_normal inst49;verifie_pere(inst49);
+Champ_front_t inst50;verifie_pere(inst50);
+Champ_front_tangentiel inst51;verifie_pere(inst51);
+Champ_front_txyz inst52;verifie_pere(inst52);
+Champ_front_uniforme inst53;verifie_pere(inst53);
+Champ_front_xyz_debit inst54;verifie_pere(inst54);
+Champ_input_P0 inst55;verifie_pere(inst55);
+Init_par_partie inst56;verifie_pere(inst56);
+Tayl_Green inst57;verifie_pere(inst57);
+champ_init_canal_sinal inst58;verifie_pere(inst58);
 }
